Fix spacing in the files

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,16 @@
-html {background-color: #f2f1ed;
-font-family: Georgia, serif;
+html {
+  background-color: #f2f1ed;
+  font-family: Georgia, serif;
 }
-h1 {color: #5d8432;
-text-transform: uppercase;
+h1 {
+  color: #5d8432;
+  text-transform: uppercase;
 }
-img {width: 100%;
+figcaption {
+  font-size: 0.8rem;
+  font-style: italic;
+  text-align: center;
+}
+img {
+  width: 100%;
 }
